working on improvements on home page and minor fixes

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -68,6 +68,7 @@
     "noAppointmentsToday": "No scheduled appointments today",
     "todaysAppointmentsColumn": {
       "patient": "Patient",
+      "productGroup": "Product Group",
       "doctor": "Doctor",
       "time": "Time",
       "contact": "Contact"
