Fix translations for search filter fields on several pages

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -11,6 +11,11 @@
     "callCenter": "Call Center",
     "settings": "Settings"
   },
+  "shared": {
+    "search": "Search",
+    "searchBy": "Search By",
+    "sortBy": "Sort By"
+  },
   "documents": {
     "offers": "Offers",
     "invoices": "Invoices",
