modifying emazing report page

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -536,6 +536,7 @@
     "lastYear": "Lani",
     "countrySelect": "Vse države",
     "servicesSummaryColumn": {
+      "serviceFee": "Provizija",
       "serviceTitle": "Ime storitve",
       "serviceCount": "Število storitev",
       "serviceAmount": "Znesek"
