--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -537,6 +537,7 @@
     "lastYear": "Last Year",
     "countrySelect": "All Countries",
     "servicesSummaryColumn": {
+      "serviceFee": "Fee",
       "serviceTitle": "Service Title",
       "serviceCount": "Service Count",
       "serviceAmount": "Amount"
