Sent sms card in EPR

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -184,6 +184,7 @@
       "allergiesUpdated": "Last updated",
       "patientNotes": "Patient notes",
       "patientNotesOpen": "Open",
+      "sms": "SMS Sent",
       "openAssignments": "Open assignments",
       "futureAppointments": "Future appointments",
       "pastAppointments": "Past appointments",
