--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -183,6 +183,7 @@
       "allergiesUpdated": "Nazadnje posodobljeno",
       "patientNotes": "Opombe o pacientu",
       "patientNotesOpen": "Odpri",
+      "sms": "Poslani SMSI",
       "openAssignments": "Odprte naloge",
       "futureAppointments": "Bodoči termini",
       "pastAppointments": "Pretekli termini",
