restructure of calendar code and appointments in EPR are now colored based on status

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -28,7 +28,7 @@
   "reporting": {
     "emazing": "Emazing",
     "doctor": "Doktor",
-    "tax authority": "Davnčna uprava"
+    "tax authority": "Davčna uprava"
   },
   "callCenter": {
     "leads": "Leadi",
