--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -235,7 +235,8 @@
       },
       "invoicesHeader": "Invoices",
       "addInvoice": "New invoice",
-      "servicesSummary": "Services Summary"
+      "servicesSummary": "Services Summary",
+      "addService": "New service"
     },
     "invoicesColumn": {
       "type": "Type",
