now new patients being added via modal

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -158,7 +158,9 @@
       "nextVisit": "Next Visit",
       "personalDentist": "Personal Dentist",
       "action": "Actions"
-    }
+    },
+    "save": "Shrani",
+    "close": "Close"
   },
   "EPR": {
     "overviewTab": "Overview",
