--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -157,7 +157,9 @@
       "nextVisit": "Naslednji termin",
       "personalDentist": "Osebni zobozdravnik",
       "action": "Možnosti"
-    }
+    },
+    "save": "Dodaj",
+    "close": "Zapri"
   },
   "EPR": {
     "overviewTab": "Pregled",
