--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -119,7 +119,9 @@
     "btnEPR": "View patient record",
     "btnSave": "Save",
     "btnCancel": "Cancel",
-    "btnCancelation": "Cancel appointment"
+    "btnCancelation": "Cancel appointment",
+    "notSavedModalHeader": "Are you sure you want to ignore your changes?",
+    "notSavedModalBody": "Be careful!, You have unsaved changes. Do you want to save them before closing the modal?"
   },
   "calendarEvent": {
     "start": "Start",
