Added toast for uploading file

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -226,7 +226,8 @@
       "fileType": "File type",
       "fileCreatedAt": "Date",
       "fileAddedAt": "Added at",
-      "downloadFile": "Download file"
+      "downloadFile": "Download file",
+      "uploadingFile": "File is uploading..."
     },
     "invoicesTab": "Invoices",
     "invoices": {
