--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -225,7 +225,8 @@
       "fileType": "Vrsta datoteke",
       "fileCreatedAt": "Ustvarjeno",
       "fileAddedAt": "Dodano",
-      "downloadFile": "Prenesi datoteko"
+      "downloadFile": "Prenesi datoteko",
+      "uploadingFile": "Datoteka se nalaga..."
     },
     "invoicesTab": "Računi",
     "invoices": {
