PRM appointments now synced with CRM appointments

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -130,7 +130,7 @@
     "duration": "Duration",
     "note": "Note",
     "changeColor": "Change Color",
-    "labels": "Labels",
+    "labels": "Label",
     "viewPatient": "View Patient",
     "changeDisplayColor": "Change Appointment Color",
     "appointmentCancelled": "Appointment Cancelled by the Patient",
