Put chart inside card

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -72,6 +72,7 @@
     "todaysAppointments": "Today's appointments",
     "noAppointmentsToday": "No scheduled appointments today",
     "patientsByCountry": "Patients this week by country",
+    "appointmentChart": "Number of appointments",
     "todaysAppointmentsColumn": {
       "patient": "Patient",
       "productGroup": "Product Group",
