--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -72,6 +72,7 @@
     "todaysAppointments": "Današnji termini",
     "noAppointmentsToday": "Danes ni dogovorjenih terminov",
     "patientsByCountry": "Pacienti v tem tednu po državah",
+    "appointmentChart": "Število terminov",
     "todaysAppointmentsColumn": {
       "patient": "Pacient",
       "productGroup": "Produktna skupina",
