Security, routing and boiler-plate code for 'settings/online-booking'

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -48,7 +48,8 @@
     "SMSTemplates": "SMS templates",
     "mailTemplates": "Mail templates",
     "advertising": "Advertising",
-    "labels": "Labels"
+    "labels": "Labels",
+    "onlineBooking": "Online booking"
   },
   "nav": {
     "allNotifications": "All Notifications",
