--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -48,7 +48,8 @@
     "SMSTemplates": "SMS predloge",
     "mailTemplates": "Mail predloge",
     "advertising": "Oglaševanje",
-    "labels": "Oznake"
+    "labels": "Oznake",
+    "onlineBooking": "Spletne rezervacije"
   },
   "nav": {
     "allNotifications": "Vsa obvestila",
