wip: online booking component localization

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -742,5 +742,44 @@
     "rtlMode": "RTL Mode",
     "rtl": "RTL",
     "reset": "Reset"
+  },
+  "public": {
+    "onlineBooking": {
+      "pickService": "Pick service",
+      "chooseTime": "Choose time",
+      "review": "Review",
+      "service": "Service",
+      "time": "Time",
+      "price": "Price",
+      "taken": "taken",
+      "closed": "closed",
+      "chooseYourFavoriteDoctor": "Choose your favorite doctor",
+      "selectOption": "Select option",
+      "pressEnterToSelect": "Press enter to select",
+      "pressEnterToRemove": "Press enter to remove",
+      "availableDoctors": "Available Doctors",
+      "showMore": "Show more...",
+      "totalInfo": "Total Info",
+      "date": "Date",
+      "total": "Total",
+      "backToServices": "Back to Services",
+      "toReview": "To review",
+      "checkSelectedSlotAndConfirmReservation": "Check selected slot and confirm reservation.",
+      "selectedSlot": "Selected slot",
+      "at": "at",
+      "startAt": "Start at",
+      "slotsAndPrices": "Slots and Prices",
+      "confirm": "Confirm",
+      "dataConfirmed": "Data confirmed",
+      "checkYourData": "Check your data",
+      "pleaseEnterYourMobileNumber": "Please enter your mobile number, so that we can contact you in case of any change.",
+      "phoneNumber": "Phone number",
+      "phone": "Phone",
+      "saveAndSendVerification": "Save and send verification SMS.",
+      "yourDetailsHaveBeenSuccessfullyVerified": "Your details have been successfully verified. We look forward to your visit.",
+      "smsVerificationCode": "Sms verification code:",
+      "confirmationCode": "Confirmation code",
+      "confirmCode": "Confirm code"
+    }
   }
 }
