feat: appointments page

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -3,6 +3,7 @@
     "dashboard": "Home",
     "callCenterDashboard": "Call Center Dashboard",
     "calendar": "Calendar",
+    "appointments": "Appointments",
     "patients": "Patients",
     "documents": "Documents",
     "assignments": "Assignments",
@@ -691,7 +692,9 @@
       "title": "Online booking - service",
       "save": "Save",
       "close": "Close",
-      "service": "Service",
+      "slovenian": "Name (Slovenian)",
+      "italian": "Name (Italian)",
+      "english": "Name (English)",
       "price": "Price",
       "duration": "Duration (min)",
       "doctor": "Doctor",
