--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -3,6 +3,7 @@
     "dashboard": "Domov",
     "callCenterDashboard": "Klicni Center Dashboard",
     "calendar": "Koledar",
+    "appointments": "Termini",
     "patients": "Pacienti",
     "documents": "Dokumenti",
     "assignments": "Naloge",
@@ -688,7 +689,9 @@
       "title": "Spletne rezervacije - storitev",
       "save": "Shrani",
       "close": "Zapri",
-      "service": "Storitev",
+      "slovenian": "Opis (slovenščina)",
+      "italian": "Opis (italijanščina)",
+      "english": "Opis (angleščina)",
       "price": "Cena",
       "duration": "Dolžina (min)",
       "doctor": "Doktor",
