feat: now saving client_id when adding patient

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -15,7 +15,8 @@
   "shared": {
     "search": "Search",
     "searchBy": "Search By",
-    "sortBy": "Sort By"
+    "sortBy": "Sort By",
+    "country": "Country"
   },
   "documents": {
     "offers": "Offers",
