wip: Adding teeth, surface and comment to invoice items

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -363,7 +363,10 @@
         "price": "Price",
         "discount": "Discount",
         "amount": "Amount",
-        "action": "Action"
+        "action": "Action",
+        "teeth": "Teeth",
+        "surface": "Surface",
+        "comment": "Comment"
       },
       "newInvoiceSummary": {
         "header": "Invoice summary",
