--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -360,7 +360,10 @@
         "price": "Cena",
         "discount": "Popust",
         "amount": "Znesek",
-        "action": "Možnosti"
+        "action": "Možnosti",
+        "teeth": "Zob",
+        "surface": "Površino",
+        "comment": "Komentar"
       },
       "newInvoiceSummary": {
         "header": "Povzetek računa",
