feat: slovene localization of public online booking page

--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -760,43 +760,43 @@
   },
   "public": {
     "onlineBooking": {
-      "pickService": "Pick service",
-      "chooseTime": "Choose time",
-      "review": "Review",
-      "service": "Service",
-      "time": "Time",
-      "price": "Price",
-      "taken": "taken",
-      "closed": "closed",
-      "chooseYourFavoriteDoctor": "Choose your favorite doctor",
-      "selectOption": "Select option",
-      "pressEnterToSelect": "Press enter to select",
-      "pressEnterToRemove": "Press enter to remove",
-      "availableDoctors": "Available Doctors",
-      "showMore": "Show more...",
-      "totalInfo": "Total Info",
-      "date": "Date",
-      "total": "Total",
-      "backToServices": "Back to Services",
-      "toReview": "To review",
-      "checkSelectedSlotAndConfirmReservation": "Check selected slot and confirm reservation.",
-      "selectedSlot": "Selected slot",
-      "at": "at",
-      "startAt": "Start at",
-      "slotsAndPrices": "Slots and Prices",
-      "confirm": "Confirm",
-      "dataConfirmed": "Data confirmed",
-      "confirmationOfBooking": "Confirmation of booking",
-      "pleaseEnterYourMobileNumber": "Please enter your mobile number, so that we can contact you in case of any change.",
-      "phoneNumber": "Phone number",
-      "phone": "Phone",
-      "sendVerificationCode": "Send verification code",
-      "theCodeHasBeenSentTo": "The code has been sent to",
-      "smsVerificationCode": "Sms verification code:",
-      "confirmationCode": "Confirmation code",
-      "confirmCode": "Confirm code",
-      "modifyPhoneNumber": "Modify phone number",
-      "yourDetailsHaveBeenSuccessfullyVerified": "Your details have been successfully verified. We look forward to your visit."
+      "pickService": "Izberite storitev",
+      "chooseTime": "Izberite termin",
+      "review": "Pregled",
+      "service": "Storitev",
+      "time": "Čas",
+      "price": "Cena",
+      "taken": "Zasedeno",
+      "closed": "Zaprto",
+      "chooseYourFavoriteDoctor": "Izberite zdravnika",
+      "selectOption": "Izberite možnost",
+      "pressEnterToSelect": "Pritisnite enter, da izberete",
+      "pressEnterToRemove": "Pritisnite enter, da odstranite",
+      "availableDoctors": "Prosti zdravniki",
+      "showMore": "Pokaži več",
+      "totalInfo": "Popolni podatki",
+      "date": "Datum",
+      "total": "Skupaj",
+      "backToServices": "Nazaj na storitve",
+      "toReview": "Na pregled",
+      "checkSelectedSlotAndConfirmReservation": "Obkljukajte izbrane termine in potrdite rezervacijo.",
+      "selectedSlot": "Izbran termin",
+      "at": "ob",
+      "startAt": "Začetek ob",
+      "slotsAndPrices": "Termini in cene",
+      "confirm": "Potrdi",
+      "dataConfirmed": "Podatki potrjeni",
+      "confirmationOfBooking": "Potrditev rezervacije",
+      "pleaseEnterYourMobileNumber": "Prosimo vnesite svojo telefonsko številko, da vas lahko kontaktiramo vkolikor pride do sprememb.",
+      "phoneNumber": "Telefonska številka",
+      "phone": "Telefon",
+      "sendVerificationCode": "Pošlji potrditveno kodo",
+      "theCodeHasBeenSentTo": "Koda je bila poslana na",
+      "smsVerificationCode": "Sms potrditvena koda:",
+      "confirmationCode": "Potrditvena koda",
+      "confirmCode": "Potrdi kodo",
+      "modifyPhoneNumber": "Spremeni telefonsko številko",
+      "yourDetailsHaveBeenSuccessfullyVerified": "Vaši podatki so bili potrjeni. Veselimo se vašega obiska."
     }
   }
 }
