--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -526,7 +526,7 @@
       "enquiry": "Pacient",
       "description": "Opis",
       "due_at": "Datum",
-      "users": "Uporabnik",
+      "assignTo": "Zadolžen",
       "close": "Zapri",
       "save": "Shrani",
       "patientAttended": "Pacient se je udeležil"
