chore: more fields added to service list

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -569,6 +569,9 @@
       "serviceFee": "Fee",
       "serviceLocation": "Location",
       "serviceDoctor": "Doctor",
+      "serviceCountry": "Country",
+      "serviceRegion": "Region",
+      "serviceMunicipality": "Municipality",
       "serviceLastConsult": "Last Consult Location"
     }
   },
