--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -566,6 +566,9 @@
       "serviceFee": "Provizija",
       "serviceLocation": "Lokacija",
       "serviceDoctor": "Zdravnik",
+      "serviceCountry": "Država",
+      "serviceRegion": "Regija",
+      "serviceMunicipality": "Občina",
       "serviceLastConsult": "Lokacija zadnjega posveta"
     }
   },
