fix: localization added for modal

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -535,6 +535,7 @@
       "save": "Save"
     },
     "completeAssignmentModal": {
+      "title": "Update Assignment",
       "no": "No",
       "yes": "Yes",
       "tickAssignment": "Are you sure you want to complete this assignment?",
