confirmation modal and slotTime change bugs are fixed
Signed-off-by: abdullahcalisir12 <abdullahcalisir12@gmail.com>

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -149,7 +149,9 @@
     "product_group": "Product Group",
     "appointmentCanceledInAdvanceByClinic": "Appointment canceled by clinic",
     "appointmentCanceledInAdvanceByPatient": "Appointment canceled by patient",
-    "requiredFields": "Fields marked with * have to be filled"
+    "requiredFields": "Fields marked with * have to be filled",
+    "eventMoveBetweenResources": "Are you sure you want to move this event to another resource?",
+    "eventTimeChange": "Are you sure you want to change this event's start or end date?"
   },
   "patients": {
     "patientsHeader": "Patients",
