feat: booking - add name field

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -807,7 +807,9 @@
       "confirm": "Confirm",
       "dataConfirmed": "Data confirmed",
       "confirmationOfBooking": "Confirmation of booking",
-      "pleaseEnterYourMobileNumber": "Please enter your mobile number, so that we can contact you in case of any change.",
+      "firstName": "First name",
+      "lastName": "Last name",
+      "pleaseEnterYourMobileNumber": "Please enter your mobile phone number so we can verify and confirm your booking",
       "phoneNumber": "Phone number",
       "phone": "Phone",
       "sendVerificationCode": "Send verification code",
