--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -804,6 +804,7 @@
       "at": "at",
       "startAt": "Start at",
       "slotsAndPrices": "Slots and Prices",
+      "doctor": "Doctor",
       "confirm": "Confirm",
       "dataConfirmed": "Data confirmed",
       "confirmationOfBooking": "Confirmation of booking",
