feat: set default phone country code from url query, localization

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -785,6 +785,7 @@
       "chooseTime": "Choose time",
       "review": "Review",
       "service": "Service",
+      "doctor": "Doctor",
       "time": "Time",
       "price": "Price",
       "taken": "taken",
