--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -782,6 +782,7 @@
       "chooseTime": "Izberite termin",
       "review": "Pregled",
       "service": "Storitev",
+      "doctor": "sl - Doctor",
       "time": "Čas",
       "price": "Cena",
       "taken": "Zasedeno",
@@ -805,7 +806,9 @@
       "confirm": "Potrdi",
       "dataConfirmed": "Podatki potrjeni",
       "confirmationOfBooking": "Potrditev rezervacije",
-      "pleaseEnterYourMobileNumber": "Prosimo vnesite svojo telefonsko številko, da vas lahko kontaktiramo vkolikor pride do sprememb.",
+      "firstName": "sl - First name",
+      "lastName": "sl - Last name",
+      "pleaseEnterYourMobileNumber": "sl - Please enter your mobile phone number so we can verify and confirm your booking",
       "phoneNumber": "Telefonska številka",
       "phone": "Telefon",
       "sendVerificationCode": "Pošlji potrditveno kodo",
